@@ -35,7 +35,8 @@ public class TestHiSpeedCache {
         assert (end- start) >= 9000;
         assert withCacheDemoService.getSomethingCount() == 3; // 实际也执行了3次
     }
-
+    
+    /** 缓存null值 */
     @Test
     public void testWithCache() throws Exception {
         Thread.sleep(15000); // 等待缓存过期，缓存的continueFetchSecond是10秒
@@ -56,7 +57,55 @@ public class TestHiSpeedCache {
 
         System.out.println("cost:" + (end - start) + "ms");
         assert (end - start) >= 3000 && (end - start) < 3800;
-        assert withCacheDemoService.getSomethingWithCacheCount() == 1;
+        assert withCacheDemoService.getSomethingWithCacheCount() == 1;  // 目标方法实际只执行了一次
+    }
+    
+    /** 不缓存null值 */
+    @Test
+    public void testWithNotCacheNullValue() throws Exception {
+        Thread.sleep(15000); // 等待缓存过期，缓存的continueFetchSecond是10秒
+        
+        withCacheDemoService.resetSomethingWithCacheCount();
+        
+        long start = System.currentTimeMillis();
+        String str = withCacheDemoService.getSomethingWithNotCacheNullValue();
+        assert str == null;
+        System.out.println(str + new Date());
+        str = withCacheDemoService.getSomethingWithNotCacheNullValue(); // 这次调用不走缓存 目标方法被调用
+        assert str == null;
+        System.out.println(str + new Date());
+        str = withCacheDemoService.getSomethingWithNotCacheNullValue(); // 这次调用不走缓存 目标方法被调用
+        assert str == null;
+        System.out.println(str + new Date());
+        long end = System.currentTimeMillis();
+        
+        System.out.println("cost:" + (end - start) + "ms");
+        assert (end - start) >= 9000 && (end - start) < 9900;
+        System.out.println(withCacheDemoService.getSomethingWithCacheCount());
+        // second 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 ...
+        //   call 1       12       23        3                                             3times
+        //  fetch             1        2        3        3        3                        5times max
+        // 当前时间在 9~10 秒之间 调用执行了3次 continueFetch执行了两次
+        assert withCacheDemoService.getSomethingWithCacheCount() == 5;
+        
+        Thread.sleep(2000);  // 11 second
+        System.out.println(withCacheDemoService.getSomethingWithCacheCount());
+        assert withCacheDemoService.getSomethingWithCacheCount() == 6;
+        Thread.sleep(3000);  // 14 second
+        System.out.println(withCacheDemoService.getSomethingWithCacheCount());
+        assert withCacheDemoService.getSomethingWithCacheCount() == 7;
+        Thread.sleep(3000);  // 17 second
+        System.out.println(withCacheDemoService.getSomethingWithCacheCount());
+        assert withCacheDemoService.getSomethingWithCacheCount() == 8;
+        Thread.sleep(3000);  // 20 second
+        System.out.println(withCacheDemoService.getSomethingWithCacheCount());
+        assert withCacheDemoService.getSomethingWithCacheCount() == 8;
+        Thread.sleep(3000);  // 20 second
+        System.out.println(withCacheDemoService.getSomethingWithCacheCount());
+        assert withCacheDemoService.getSomethingWithCacheCount() == 8;
+        Thread.sleep(3000);  // 24 second
+        System.out.println(withCacheDemoService.getSomethingWithCacheCount());
+        assert withCacheDemoService.getSomethingWithCacheCount() == 8;
     }
 
     @Test
