@@ -1,3 +1,5 @@
+- [add] HiSpeedCache添加cacheNullValue属性，支持配置返回null值时不缓存
+
 v1.0.0
 - [init] 初始代码来自于woo-utils 0.9.2版本https://github.com/pugwoo/woo-utils
 - [add] HiSpeedCache增加控制fetch并行串行的能力，默认为相同缓存任务为串行，原为并行
